fix: plus on IE

--- a/_HTML/src/sass/_blocks/transportation/services.scss
+++ b/_HTML/src/sass/_blocks/transportation/services.scss
@@ -237,3 +237,10 @@
 		}
 	}
 }
+
+.ie {
+  .t-counter__action--plus::after {
+    top: 1px;
+    left: 12px;
+  }
+}
